fix daemon dependency name for rocketchat-server

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -27,7 +27,7 @@ apps:
       ROOT_URL: http://localhost:3001
       Accounts_AvatarStorePath: $SNAP_COMMON/uploads
     daemon: simple
-    after: [mongod]
+    after: [rocketchat-mongo]
     plugs:
       - network
       - network-bind
